--- a/carshop/src/main/resources/templates/index.html
+++ b/carshop/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <div>
     <h2>Warsztat Samochody FIX-CAR</h2>
-    <p><a href="carform.html">Dodaj auto</a></p>
+    <p><a href="carform">Dodaj auto</a></p>
 </div>
 </body>
 </html>
