--- a/carshop/src/main/resources/templates/cars.html
+++ b/carshop/src/main/resources/templates/cars.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-    <title>Result</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Car List</title>
 </head>
 <body>
     <div th:replace="fragments/navbar :: navbar">
 
     </div>
         <div>
-            <h1>Result</h1>
+            <h2>Car List</h2>
             <table class="table">
                 <tr>
                     <th>Make</th>
@@ -22,7 +22,8 @@
                     <th>Is Fixed</th>
                     <th>Fix</th>
                 </tr>
-                <tr>
+                <tr th:each="car : ${cars}">
+
                     <td th:text="${car.make}"></td>
                     <td th:text="${car.registration}"></td>
                     <td th:text="${car.description}"></td>
