--- a/carshop/src/main/resources/templates/carsnotfixed.html
+++ b/carshop/src/main/resources/templates/carsnotfixed.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
-    <title>Result</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Cars not Fixed</title>
 </head>
 <body>
     <div th:replace="fragments/navbar :: navbar">
 
     </div>
         <div>
-            <h1>Result</h1>
+            <h2>Cars not Fixed</h2>
             <table class="table">
                 <tr>
                     <th>Make</th>
@@ -22,14 +22,15 @@
                     <th>Is Fixed</th>
                     <th>Fix</th>
                 </tr>
-                <tr>
-                    <td th:text="${car.make}"></td>
-                    <td th:text="${car.registration}"></td>
-                    <td th:text="${car.description}"></td>
-                    <td th:text="${car.year}"></td>
-                    <td th:text="${car.color}"></td>
-                    <td th:text="${#dates.format(car.arriveDate, 'dd-MM-yyyy')}"></td>
-                    <td th:text="${car.isFixed}"></td>
+                <tr th:each="car : ${cars}">
+                    <span th:unless="${car.isFixed}">
+                        <td th:text="${car.make}"></td>
+                        <td th:text="${car.registration}"></td>
+                        <td th:text="${car.description}"></td>
+                        <td th:text="${car.year}"></td>
+                        <td th:text="${car.color}"></td>
+                        <td th:text="${#dates.format(car.arriveDate, 'dd-MM-yyyy')}"></td>
+                        <td th:text="${car.isFixed}"></td>
                     <span th:unless="${car.isFixed}">
                         <form action="#" th:action="@{/cars}" th:object="${car}" method="post">
                             <input type="hidden" th:value="${car.id}" name="id"/>
