--- a/carshop/src/main/resources/templates/success.html
+++ b/carshop/src/main/resources/templates/success.html
@@ -10,7 +10,7 @@
     <div th:replace="fragments/navbar :: navbar">
 
     </div>
-    <h1>Car Fixed!</h1>
+    <h1>Success!</h1>
     <a href="cars"><input class="btn btn-primary" type="button" value="Go Back"/></a>
 </body>
 </html>
